--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "sass": "^1.77.0"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.7",
-    "datatables.net": "^2.3.2",
-    "jquery": "^3.7.1"
+    "bootstrap": "^5.3.0",
+    "jquery": "^3.7.1",
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0"
   }
 }
