--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "start": "rimraf app/static/dist && npm run build",
+    "build": "vite build",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^5.0.0",
-    "sass": "^1.77.0"
+    "rimraf": "^6.0.1",
+    "sass": "^1.77.0",
+    "vite": "^5.0.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
-    "jquery": "^3.7.1",
+    "bootstrap-icons": "^1.13.1",
+    "choices.js": "^11.1.0",
     "datatables.net": "^2.0.0",
-    "datatables.net-dt": "^2.0.0"
+    "datatables.net-bs5": "^2.3.2",
+    "datatables.net-dt": "^2.0.0",
+    "jquery": "^3.7.1",
+    "select2": "^4.1.0-rc.0",
+    "sweetalert2": "^11.22.2"
   }
 }
